@@ -72,7 +72,6 @@ SLPError ProcessSrvReg(PSLPHandleInfo handle)
 /*-------------------------------------------------------------------------*/
 {
     struct sockaddr_in  peeraddr;
-    int                 sock        = 0;
     int                 bufsize     = 0;
     char*               buf         = 0;
     char*               curpos      = 0;
@@ -144,24 +143,8 @@ SLPError ProcessSrvReg(PSLPHandleInfo handle)
     /* attr auths*/
     *(curpos) = 0;
     
-    /*---------------------------------------*/
-    /* Connect to slpd or a DA               */
-    /*---------------------------------------*/
-    sock = NetworkConnectToSlpd(&peeraddr);
-    if(sock < 0)
-    {
-        sock = NetworkConnectToDA(handle->params.reg.scopelist,
-                                  handle->params.reg.scopelistlen,
-                                  &peeraddr);
-
-        if(sock < 0)
-        {
-            result = SLP_NETWORK_INIT_FAILED;
-            goto FINISHED;
-        }
-    }
-
-    result = NetworkRqstRply(sock,
+    /* try first with existing SA socket */
+    result = NetworkRqstRply(handle->sasock,
                              &peeraddr,
                              handle->langtag,
                              buf,
@@ -169,6 +152,39 @@ SLPError ProcessSrvReg(PSLPHandleInfo handle)
                              bufsize,
                              CallbackSrvReg,
                              handle);
+
+    /* Connect / Re-connect and try again */
+    if(result)
+    {
+        if(handle->sasock >= 0)
+        {
+            close(handle->sasock);
+        }
+
+        handle->sasock = NetworkConnectToSlpd(&peeraddr);
+        if(handle->sasock < 0)
+        {
+            handle->sasock = NetworkConnectToDA(handle->params.reg.scopelist,
+                                                handle->params.reg.scopelistlen,
+                                                &peeraddr);
+    
+            if(handle->sasock < 0)
+            {
+                result = SLP_NETWORK_INIT_FAILED;
+                goto FINISHED;
+            }
+        }
+        
+        result = NetworkRqstRply(handle->sasock,
+                         &peeraddr,
+                         handle->langtag,
+                         buf,
+                         SLP_FUNCT_SRVREG,
+                         bufsize,
+                         CallbackSrvReg,
+                         handle); 
+
+    }
     
     FINISHED:
     if(buf) free(buf);
